pamc/src/tests/sample_code/should_fail/single_file/parse/empty_parens/empty_fun_params.ph
type U {
    .U: U,
}

let foo = fun foo(): U { U.U };
